--- a/src/_widths.css
+++ b/src/_widths.css
@@ -14,6 +14,8 @@
     4 = 4th step in width scale
     5 = 5th step in width scale
     6 = 6th step in width scale
+    7 = 7th step in width scale
+    8 = 8th step in width scale
 
     -10  = literal value 10%
     -20  = literal value 20%
@@ -46,9 +48,11 @@
 .w1 { width: 0.5rem; }
 .w2 { width: 1rem; }
 .w3 { width: 2rem; }
-.w4 { width: 4rem; }
-.w5 { width: 8rem; }
-.w6 { width: 16rem; }
+.w4 { width: 2.5rem; }
+.w5 { width: 4rem; }
+.w6 { width: 4.5rem; }
+.w7 { width: 8rem; }
+.w8 { width: 16rem; }
 .w-10 {  width:  10%; }
 .w-20 {  width:  20%; }
 .w-25 {  width:  25%; }
@@ -71,9 +75,11 @@
 						.w1-s { width: 0.5rem; }
 .w2-s { width: 1rem; }
 .w3-s { width: 2rem; }
-.w4-s { width: 4rem; }
-.w5-s { width: 8rem; }
-.w6-s { width: 16rem; }
+.w4-s { width: 2.5rem; }
+.w5-s { width: 4rem; }
+.w6-s { width: 4.5rem; }
+.w7-s { width: 8rem; }
+.w8-s { width: 16rem; }
 .w-10-s {  width:  10%; }
 .w-20-s {  width:  20%; }
 .w-25-s {  width:  25%; }
@@ -98,9 +104,11 @@
 						.w1-m { width: 0.5rem; }
 .w2-m { width: 1rem; }
 .w3-m { width: 2rem; }
-.w4-m { width: 4rem; }
-.w5-m { width: 8rem; }
-.w6-m { width: 16rem; }
+.w4-m { width: 2.5rem; }
+.w5-m { width: 4rem; }
+.w6-m { width: 4.5rem; }
+.w7-m { width: 8rem; }
+.w8-m { width: 16rem; }
 .w-10-m {  width:  10%; }
 .w-20-m {  width:  20%; }
 .w-25-m {  width:  25%; }
@@ -125,9 +133,11 @@
 						.w1-l { width: 0.5rem; }
 .w2-l { width: 1rem; }
 .w3-l { width: 2rem; }
-.w4-l { width: 4rem; }
-.w5-l { width: 8rem; }
-.w6-l { width: 16rem; }
+.w4-l { width: 2.5rem; }
+.w5-l { width: 4rem; }
+.w6-l { width: 4.5rem; }
+.w7-l { width: 8rem; }
+.w8-l { width: 16rem; }
 .w-10-l {  width:  10%; }
 .w-20-l {  width:  20%; }
 .w-25-l {  width:  25%; }
@@ -152,9 +162,11 @@
 						.w1-xl { width: 0.5rem; }
 .w2-xl { width: 1rem; }
 .w3-xl { width: 2rem; }
-.w4-xl { width: 4rem; }
-.w5-xl { width: 8rem; }
-.w6-xl { width: 16rem; }
+.w4-xl { width: 2.5rem; }
+.w5-xl { width: 4rem; }
+.w6-xl { width: 4.5rem; }
+.w7-xl { width: 8rem; }
+.w8-xl { width: 16rem; }
 .w-10-xl {  width:  10%; }
 .w-20-xl {  width:  20%; }
 .w-25-xl {  width:  25%; }
@@ -179,9 +191,11 @@
 						.w1-ns { width: 0.5rem; }
 .w2-ns { width: 1rem; }
 .w3-ns { width: 2rem; }
-.w4-ns { width: 4rem; }
-.w5-ns { width: 8rem; }
-.w6-ns { width: 16rem; }
+.w4-ns { width: 2.5rem; }
+.w5-ns { width: 4rem; }
+.w6-ns { width: 4.5rem; }
+.w7-ns { width: 8rem; }
+.w8-ns { width: 16rem; }
 .w-10-ns {  width:  10%; }
 .w-20-ns {  width:  20%; }
 .w-25-ns {  width:  25%; }
