Changes to Tachyons Gocommerce

--- a/src/_colors.css
+++ b/src/_colors.css
@@ -1,29 +1,33 @@
 :root {
   
---white: #ffffff;
+--gc-blue: #4B71FC;
+--gc-blue-80: #708FFF;
+--gc-blue-60: #91A9FF;
+--gc-blue-40: #BDCCFF;
+--gc-blue-20: #EAEFFF;
+--gc-navy: #212E5F;
+--gc-navy-80: #7B83A1;
+--gc-navy-60: #9FA6BF;
+--gc-navy-40: #D7DBE7;
+--gc-navy-20: #EFF1F9;
 --black: #000000;
---invisible-blue: #F3F4F9;
---ash-blue: #9FA6BF;
---go-blue: #4B71FC;
---deep-blue: #212E5F;
---deepest-blue: #07133E;
---near-black: #3d3e40;
---dark-gray: #565759;
---mid-gray: #6e7073;
---gray: #939699;
---silver: #c4c8cc;
---light-gray: #dce1e6;
---light-silver: #f0f5fa;
---near-white: #f5faff;
---light-marine: #3d5980;
---marine: #25354d;
---serious-black: #142032;
---green: #09DD04;
---washed-green: #e6fff9;
+--white: #ffffff;
+--green: #39B54A;
+--green-light: #E6FFEA;
+--yellow: #FFA721;
+--yellow-light: #FFF7E4;
 --red: #FF3D44;
---washed-red: #fff2f2;
---yellow: #ffb100;
---washed-yellow: #fffbf2;
---transparent: rgba(0,0,0,0);
+--red-light: #FFE8E8;
+--black-20: rgba(0,0,0,.20);
+--black-40: rgba(0,0,0,.40);
+--black-60: rgba(0,0,0,.60);
+--black-80: rgba(0,0,0,.80);
+--black-90: rgba(0,0,0,.90);
+--white-20: rgba(255,255,255,.20);
+--white-40: rgba(255,255,255,.40);
+--white-60: rgba(255,255,255,.60);
+--white-80: rgba(255,255,255,.80);
+--white-90: rgba(255,255,255,.90);
+--transparent: transparent;
 
 }
