--- a/src/_border-radius.css
+++ b/src/_border-radius.css
@@ -19,11 +19,11 @@
     -pill = 9999px
 
   Media Query Extensions:
-    -s  = 20em
-    -ns  = 40em
-    -m  = 40em
-    -l  = 64em
-    -xl  = 80em
+    -xs  = 36em
+    -s  = 48em
+    -m  = 62em
+    -l  = 75em
+    -xl  = 100em
 
 */
 .br0 { border-radius: 0rem; }
@@ -50,7 +50,34 @@
         border-bottom-right-radius: 0;
       }
 
-					@media screen and (min-width: 20em) and (max-width: 40em) {
+					@media screen and (min-width: 36em) and (max-width: 48em) {
+						.br0-xs { border-radius: 0rem; }
+.br1-xs { border-radius: 0.125rem; }
+.br2-xs { border-radius: 0.25rem; }
+.br3-xs { border-radius: 0.5rem; }
+.br4-xs { border-radius: 1rem; }
+.br-100-xs {     border-radius: 100%; }
+.br-pill-xs {    border-radius: 9999px; }
+.br--bottom-xs {
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+.br--top-xs {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+.br--right-xs {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+.br--left-xs {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+					}
+				
+
+					@media screen and (min-width: 48em) and (max-width: 62em) {
 						.br0-s { border-radius: 0rem; }
 .br1-s { border-radius: 0.125rem; }
 .br2-s { border-radius: 0.25rem; }
@@ -77,7 +104,7 @@
 					}
 				
 
-					@media screen and (min-width: 40em) and (max-width: 64em) {
+					@media screen and (min-width: 62em) and (max-width: 75em) {
 						.br0-m { border-radius: 0rem; }
 .br1-m { border-radius: 0.125rem; }
 .br2-m { border-radius: 0.25rem; }
@@ -104,7 +131,7 @@
 					}
 				
 
-					@media screen and (min-width: 64em) and (max-width: 80em) {
+					@media screen and (min-width: 75em) and (max-width: 100em) {
 						.br0-l { border-radius: 0rem; }
 .br1-l { border-radius: 0.125rem; }
 .br2-l { border-radius: 0.25rem; }
@@ -131,7 +158,7 @@
 					}
 				
 
-					@media screen and (min-width: 80em) {
+					@media screen and (min-width: 100em) {
 						.br0-xl { border-radius: 0rem; }
 .br1-xl { border-radius: 0.125rem; }
 .br2-xl { border-radius: 0.25rem; }
@@ -152,33 +179,6 @@
         border-bottom-left-radius: 0;
       }
 .br--left-xl {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-      }
-					}
-				
-
-					@media screen and (min-width: 40em) {
-						.br0-ns { border-radius: 0rem; }
-.br1-ns { border-radius: 0.125rem; }
-.br2-ns { border-radius: 0.25rem; }
-.br3-ns { border-radius: 0.5rem; }
-.br4-ns { border-radius: 1rem; }
-.br-100-ns {     border-radius: 100%; }
-.br-pill-ns {    border-radius: 9999px; }
-.br--bottom-ns {
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-      }
-.br--top-ns {
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-      }
-.br--right-ns {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-      }
-.br--left-ns {
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
       }
