--- a/src/_border-widths.css
+++ b/src/_border-widths.css
@@ -13,14 +13,13 @@
     2 = 2nd step in border-width scale
     3 = 3rd step in border-width scale
     4 = 4th step in border-width scale
-    5 = 5th step in border-width scale
 
  Media Query Extensions:
-    -s  = 20em
-    -ns  = 40em
-    -m  = 40em
-    -l  = 64em
-    -xl  = 80em
+    -xs  = 36em
+    -s  = 48em
+    -m  = 62em
+    -l  = 75em
+    -xl  = 100em
 
 */
 .bw0 { border-width: 0rem; }
@@ -28,7 +27,6 @@
 .bw2 { border-width: 0.25rem; }
 .bw3 { border-width: 0.5rem; }
 .bw4 { border-width: 1rem; }
-.bw5 { border-width: 2rem; }
 
     .bt-0 { border-top-width: 0; }
     .br-0 { border-right-width: 0; }
@@ -36,13 +34,26 @@
     .bl-0 { border-left-width: 0; }
   
 
-					@media screen and (min-width: 20em) and (max-width: 40em) {
+					@media screen and (min-width: 36em) and (max-width: 48em) {
+						.bw0-xs { border-width: 0rem; }
+.bw1-xs { border-width: 0.125rem; }
+.bw2-xs { border-width: 0.25rem; }
+.bw3-xs { border-width: 0.5rem; }
+.bw4-xs { border-width: 1rem; }
+
+    .bt-0-xs { border-top-width: 0; }
+    .br-0-xs { border-right-width: 0; }
+    .bb-0-xs { border-bottom-width: 0; }
+    .bl-0-xs { border-left-width: 0; }
+					}
+				
+
+					@media screen and (min-width: 48em) and (max-width: 62em) {
 						.bw0-s { border-width: 0rem; }
 .bw1-s { border-width: 0.125rem; }
 .bw2-s { border-width: 0.25rem; }
 .bw3-s { border-width: 0.5rem; }
 .bw4-s { border-width: 1rem; }
-.bw5-s { border-width: 2rem; }
 
     .bt-0-s { border-top-width: 0; }
     .br-0-s { border-right-width: 0; }
@@ -51,13 +62,12 @@
 					}
 				
 
-					@media screen and (min-width: 40em) and (max-width: 64em) {
+					@media screen and (min-width: 62em) and (max-width: 75em) {
 						.bw0-m { border-width: 0rem; }
 .bw1-m { border-width: 0.125rem; }
 .bw2-m { border-width: 0.25rem; }
 .bw3-m { border-width: 0.5rem; }
 .bw4-m { border-width: 1rem; }
-.bw5-m { border-width: 2rem; }
 
     .bt-0-m { border-top-width: 0; }
     .br-0-m { border-right-width: 0; }
@@ -66,13 +76,12 @@
 					}
 				
 
-					@media screen and (min-width: 64em) and (max-width: 80em) {
+					@media screen and (min-width: 75em) and (max-width: 100em) {
 						.bw0-l { border-width: 0rem; }
 .bw1-l { border-width: 0.125rem; }
 .bw2-l { border-width: 0.25rem; }
 .bw3-l { border-width: 0.5rem; }
 .bw4-l { border-width: 1rem; }
-.bw5-l { border-width: 2rem; }
 
     .bt-0-l { border-top-width: 0; }
     .br-0-l { border-right-width: 0; }
@@ -81,32 +90,16 @@
 					}
 				
 
-					@media screen and (min-width: 80em) {
+					@media screen and (min-width: 100em) {
 						.bw0-xl { border-width: 0rem; }
 .bw1-xl { border-width: 0.125rem; }
 .bw2-xl { border-width: 0.25rem; }
 .bw3-xl { border-width: 0.5rem; }
 .bw4-xl { border-width: 1rem; }
-.bw5-xl { border-width: 2rem; }
 
     .bt-0-xl { border-top-width: 0; }
     .br-0-xl { border-right-width: 0; }
     .bb-0-xl { border-bottom-width: 0; }
     .bl-0-xl { border-left-width: 0; }
-					}
-				
-
-					@media screen and (min-width: 40em) {
-						.bw0-ns { border-width: 0rem; }
-.bw1-ns { border-width: 0.125rem; }
-.bw2-ns { border-width: 0.25rem; }
-.bw3-ns { border-width: 0.5rem; }
-.bw4-ns { border-width: 1rem; }
-.bw5-ns { border-width: 2rem; }
-
-    .bt-0-ns { border-top-width: 0; }
-    .br-0-ns { border-right-width: 0; }
-    .bb-0-ns { border-bottom-width: 0; }
-    .bl-0-ns { border-left-width: 0; }
 					}
 				
