--- a/src/_box-shadow.css
+++ b/src/_box-shadow.css
@@ -1,52 +1,40 @@
 
-.shadow-1 { box-shadow: 0px 0px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-2 { box-shadow: 0px 0px 8px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-3 { box-shadow: 2px 2px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-4 { box-shadow: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ); }
-.shadow-5 { box-shadow: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 ); }
+.shadow-1 { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
+.shadow-2 { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
+.shadow-3 { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
 
 
-					@media screen and (min-width: 20em) and (max-width: 40em) {
-						.shadow-1-s { box-shadow: 0px 0px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-2-s { box-shadow: 0px 0px 8px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-3-s { box-shadow: 2px 2px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-4-s { box-shadow: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ); }
-.shadow-5-s { box-shadow: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 ); }
+					@media screen and (min-width: 36em) and (max-width: 48em) {
+						.shadow-1-xs { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
+.shadow-2-xs { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
+.shadow-3-xs { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
 					}
 				
 
-					@media screen and (min-width: 40em) and (max-width: 64em) {
-						.shadow-1-m { box-shadow: 0px 0px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-2-m { box-shadow: 0px 0px 8px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-3-m { box-shadow: 2px 2px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-4-m { box-shadow: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ); }
-.shadow-5-m { box-shadow: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 ); }
+					@media screen and (min-width: 48em) and (max-width: 62em) {
+						.shadow-1-s { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
+.shadow-2-s { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
+.shadow-3-s { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
 					}
 				
 
-					@media screen and (min-width: 64em) and (max-width: 80em) {
-						.shadow-1-l { box-shadow: 0px 0px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-2-l { box-shadow: 0px 0px 8px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-3-l { box-shadow: 2px 2px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-4-l { box-shadow: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ); }
-.shadow-5-l { box-shadow: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 ); }
+					@media screen and (min-width: 62em) and (max-width: 75em) {
+						.shadow-1-m { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
+.shadow-2-m { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
+.shadow-3-m { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
 					}
 				
 
-					@media screen and (min-width: 80em) {
-						.shadow-1-xl { box-shadow: 0px 0px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-2-xl { box-shadow: 0px 0px 8px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-3-xl { box-shadow: 2px 2px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-4-xl { box-shadow: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ); }
-.shadow-5-xl { box-shadow: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 ); }
+					@media screen and (min-width: 75em) and (max-width: 100em) {
+						.shadow-1-l { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
+.shadow-2-l { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
+.shadow-3-l { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
 					}
 				
 
-					@media screen and (min-width: 40em) {
-						.shadow-1-ns { box-shadow: 0px 0px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-2-ns { box-shadow: 0px 0px 8px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-3-ns { box-shadow: 2px 2px 4px 2px rgba( 0, 0, 0, 0.2 ); }
-.shadow-4-ns { box-shadow: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ); }
-.shadow-5-ns { box-shadow: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 ); }
+					@media screen and (min-width: 100em) {
+						.shadow-1-xl { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
+.shadow-2-xl { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
+.shadow-3-xl { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
 					}
 				
