--- a/src/_widths.css
+++ b/src/_widths.css
@@ -16,6 +16,13 @@
     6 = 6th step in width scale
     7 = 7th step in width scale
     8 = 8th step in width scale
+    9 = 9th step in width scale
+    10 = 10th step in width scale
+    11 = 11st step in width scale
+    12 = 12nd step in width scale
+    13 = 13rd step in width scale
+    14 = 14th step in width scale
+    15 = 15th step in width scale
 
     -10  = literal value 10%
     -20  = literal value 20%
@@ -38,21 +45,28 @@
     -auto       = string value auto
 
   Media Query Extensions:
-    -s  = 20em
-    -ns  = 40em
-    -m  = 40em
-    -l  = 64em
-    -xl  = 80em
+    -xs  = 36em
+    -s  = 48em
+    -m  = 62em
+    -l  = 75em
+    -xl  = 100em
 
 */
-.w1 { width: 0.5rem; }
-.w2 { width: 1rem; }
-.w3 { width: 2rem; }
-.w4 { width: 2.5rem; }
-.w5 { width: 4rem; }
-.w6 { width: 4.5rem; }
-.w7 { width: 8rem; }
-.w8 { width: 16rem; }
+.w1 { width: 0.25rem; }
+.w2 { width: 0.5rem; }
+.w3 { width: 0.75rem; }
+.w4 { width: 1rem; }
+.w5 { width: 1.25rem; }
+.w6 { width: 1.5rem; }
+.w7 { width: 1.75rem; }
+.w8 { width: 2rem; }
+.w9 { width: 2.25rem; }
+.w10 { width: 2.5rem; }
+.w11 { width: 3rem; }
+.w12 { width: 4rem; }
+.w13 { width: 5rem; }
+.w14 { width: 8rem; }
+.w15 { width: 16rem; }
 .w-10 {  width:  10%; }
 .w-20 {  width:  20%; }
 .w-25 {  width:  25%; }
@@ -71,15 +85,58 @@
 .w-two-thirds { width: calc(100% / 1.5); }
 .w-auto { width: auto; }
 
-					@media screen and (min-width: 20em) and (max-width: 40em) {
-						.w1-s { width: 0.5rem; }
-.w2-s { width: 1rem; }
-.w3-s { width: 2rem; }
-.w4-s { width: 2.5rem; }
-.w5-s { width: 4rem; }
-.w6-s { width: 4.5rem; }
-.w7-s { width: 8rem; }
-.w8-s { width: 16rem; }
+					@media screen and (min-width: 36em) and (max-width: 48em) {
+						.w1-xs { width: 0.25rem; }
+.w2-xs { width: 0.5rem; }
+.w3-xs { width: 0.75rem; }
+.w4-xs { width: 1rem; }
+.w5-xs { width: 1.25rem; }
+.w6-xs { width: 1.5rem; }
+.w7-xs { width: 1.75rem; }
+.w8-xs { width: 2rem; }
+.w9-xs { width: 2.25rem; }
+.w10-xs { width: 2.5rem; }
+.w11-xs { width: 3rem; }
+.w12-xs { width: 4rem; }
+.w13-xs { width: 5rem; }
+.w14-xs { width: 8rem; }
+.w15-xs { width: 16rem; }
+.w-10-xs {  width:  10%; }
+.w-20-xs {  width:  20%; }
+.w-25-xs {  width:  25%; }
+.w-30-xs {  width:  30%; }
+.w-33-xs {  width:  33%; }
+.w-34-xs {  width:  34%; }
+.w-40-xs {  width:  40%; }
+.w-50-xs {  width:  50%; }
+.w-60-xs {  width:  60%; }
+.w-70-xs {  width:  70%; }
+.w-75-xs {  width:  75%; }
+.w-80-xs {  width:  80%; }
+.w-90-xs {  width:  90%; }
+.w-100-xs { width: 100%; }
+.w-third-xs { width: calc(100% / 3); }
+.w-two-thirds-xs { width: calc(100% / 1.5); }
+.w-auto-xs { width: auto; }
+					}
+				
+
+					@media screen and (min-width: 48em) and (max-width: 62em) {
+						.w1-s { width: 0.25rem; }
+.w2-s { width: 0.5rem; }
+.w3-s { width: 0.75rem; }
+.w4-s { width: 1rem; }
+.w5-s { width: 1.25rem; }
+.w6-s { width: 1.5rem; }
+.w7-s { width: 1.75rem; }
+.w8-s { width: 2rem; }
+.w9-s { width: 2.25rem; }
+.w10-s { width: 2.5rem; }
+.w11-s { width: 3rem; }
+.w12-s { width: 4rem; }
+.w13-s { width: 5rem; }
+.w14-s { width: 8rem; }
+.w15-s { width: 16rem; }
 .w-10-s {  width:  10%; }
 .w-20-s {  width:  20%; }
 .w-25-s {  width:  25%; }
@@ -100,15 +157,22 @@
 					}
 				
 
-					@media screen and (min-width: 40em) and (max-width: 64em) {
-						.w1-m { width: 0.5rem; }
-.w2-m { width: 1rem; }
-.w3-m { width: 2rem; }
-.w4-m { width: 2.5rem; }
-.w5-m { width: 4rem; }
-.w6-m { width: 4.5rem; }
-.w7-m { width: 8rem; }
-.w8-m { width: 16rem; }
+					@media screen and (min-width: 62em) and (max-width: 75em) {
+						.w1-m { width: 0.25rem; }
+.w2-m { width: 0.5rem; }
+.w3-m { width: 0.75rem; }
+.w4-m { width: 1rem; }
+.w5-m { width: 1.25rem; }
+.w6-m { width: 1.5rem; }
+.w7-m { width: 1.75rem; }
+.w8-m { width: 2rem; }
+.w9-m { width: 2.25rem; }
+.w10-m { width: 2.5rem; }
+.w11-m { width: 3rem; }
+.w12-m { width: 4rem; }
+.w13-m { width: 5rem; }
+.w14-m { width: 8rem; }
+.w15-m { width: 16rem; }
 .w-10-m {  width:  10%; }
 .w-20-m {  width:  20%; }
 .w-25-m {  width:  25%; }
@@ -129,15 +193,22 @@
 					}
 				
 
-					@media screen and (min-width: 64em) and (max-width: 80em) {
-						.w1-l { width: 0.5rem; }
-.w2-l { width: 1rem; }
-.w3-l { width: 2rem; }
-.w4-l { width: 2.5rem; }
-.w5-l { width: 4rem; }
-.w6-l { width: 4.5rem; }
-.w7-l { width: 8rem; }
-.w8-l { width: 16rem; }
+					@media screen and (min-width: 75em) and (max-width: 100em) {
+						.w1-l { width: 0.25rem; }
+.w2-l { width: 0.5rem; }
+.w3-l { width: 0.75rem; }
+.w4-l { width: 1rem; }
+.w5-l { width: 1.25rem; }
+.w6-l { width: 1.5rem; }
+.w7-l { width: 1.75rem; }
+.w8-l { width: 2rem; }
+.w9-l { width: 2.25rem; }
+.w10-l { width: 2.5rem; }
+.w11-l { width: 3rem; }
+.w12-l { width: 4rem; }
+.w13-l { width: 5rem; }
+.w14-l { width: 8rem; }
+.w15-l { width: 16rem; }
 .w-10-l {  width:  10%; }
 .w-20-l {  width:  20%; }
 .w-25-l {  width:  25%; }
@@ -158,15 +229,22 @@
 					}
 				
 
-					@media screen and (min-width: 80em) {
-						.w1-xl { width: 0.5rem; }
-.w2-xl { width: 1rem; }
-.w3-xl { width: 2rem; }
-.w4-xl { width: 2.5rem; }
-.w5-xl { width: 4rem; }
-.w6-xl { width: 4.5rem; }
-.w7-xl { width: 8rem; }
-.w8-xl { width: 16rem; }
+					@media screen and (min-width: 100em) {
+						.w1-xl { width: 0.25rem; }
+.w2-xl { width: 0.5rem; }
+.w3-xl { width: 0.75rem; }
+.w4-xl { width: 1rem; }
+.w5-xl { width: 1.25rem; }
+.w6-xl { width: 1.5rem; }
+.w7-xl { width: 1.75rem; }
+.w8-xl { width: 2rem; }
+.w9-xl { width: 2.25rem; }
+.w10-xl { width: 2.5rem; }
+.w11-xl { width: 3rem; }
+.w12-xl { width: 4rem; }
+.w13-xl { width: 5rem; }
+.w14-xl { width: 8rem; }
+.w15-xl { width: 16rem; }
 .w-10-xl {  width:  10%; }
 .w-20-xl {  width:  20%; }
 .w-25-xl {  width:  25%; }
@@ -184,34 +262,5 @@
 .w-third-xl { width: calc(100% / 3); }
 .w-two-thirds-xl { width: calc(100% / 1.5); }
 .w-auto-xl { width: auto; }
-					}
-				
-
-					@media screen and (min-width: 40em) {
-						.w1-ns { width: 0.5rem; }
-.w2-ns { width: 1rem; }
-.w3-ns { width: 2rem; }
-.w4-ns { width: 2.5rem; }
-.w5-ns { width: 4rem; }
-.w6-ns { width: 4.5rem; }
-.w7-ns { width: 8rem; }
-.w8-ns { width: 16rem; }
-.w-10-ns {  width:  10%; }
-.w-20-ns {  width:  20%; }
-.w-25-ns {  width:  25%; }
-.w-30-ns {  width:  30%; }
-.w-33-ns {  width:  33%; }
-.w-34-ns {  width:  34%; }
-.w-40-ns {  width:  40%; }
-.w-50-ns {  width:  50%; }
-.w-60-ns {  width:  60%; }
-.w-70-ns {  width:  70%; }
-.w-75-ns {  width:  75%; }
-.w-80-ns {  width:  80%; }
-.w-90-ns {  width:  90%; }
-.w-100-ns { width: 100%; }
-.w-third-ns { width: calc(100% / 3); }
-.w-two-thirds-ns { width: calc(100% / 1.5); }
-.w-auto-ns { width: auto; }
 					}
 				
